Added form to call user search for suggestions, created search query in users api
